# pipeline-sklearn-mini

./: pipeline_diagram.html  pyproject.toml
src/minimum_pipeline.egg-info/: PKG-INFO  SOURCES.txt
